# fx_bayesian

./: .gitignore  README.md  app.ipynb  config.ini  notebook.ipynb  pyproject.toml  readme_parameter_estimation_w_synthetic.md
data/: fx_data.db  sqlite.db
scripts/: notebook.ipynb
src/: __init__.py  _singletons.py  analytics.py  bayesmodeller.py  chartmanager.py  datamanager.py  expertopinion.py  modeller_pymc  notebook.ipynb  paramestimation_quantile.py  paramestimation_quantile2.py  sharedutils.py
tests/unit/: test_datamanager.py
