[tool.poetry]
name = "fx-bayesian"
version = "0.1.0"
description = "A Bayesian analysis project for forex data"
authors = ["lennardong <lennard.ong@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas-datareader = "^0.10.0"
duckdb = "^1.1.0"
aiohttp = "^3.10.5"
scipy = "^1.14.1"
seaborn = "^0.13.2"
pandas = "^2.2.2"
numpy = "^2.1.1"
pytest = "^8.3.3"
mplfinance = "^0.12.10b0"
plotly = "^5.24.1"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ipython = "^8.27.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
